<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <!--ScollView 包裹的孩子 默认高度只能是包裹内容
     android:fillViewport="true"允许孩子是匹配父容器  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/menu_icon_bg"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:id="@+id/image_photo"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:background="@mipmap/bg_photo"
                android:padding="5dip" />

            <ImageView
                android:id="@+id/image_over"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@mipmap/photo_over" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/image_photo"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/tv_user_name"
                    android:textColor="#2b2b2b"
                    android:textSize="18dp" />
            </RelativeLayout>
        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#1a000000" />

        <RelativeLayout
            android:id="@+id/rl_window"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/menu_item_bg"
            android:gravity="center_vertical"
            android:paddingLeft="15dp">

            <ImageView
                android:id="@+id/ic_home"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:src="@mipmap/th_finder" />

            <TextView
                android:id="@+id/tv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/ic_home"
                android:text="@string/tv_window"
                android:textColor="#9b9b9b"
                android:textSize="18dp" />

            <CheckBox
                android:id="@+id/cb_window"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp" />
        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#1a000000" />

        <RelativeLayout
            android:id="@+id/rl_window_bottom"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/menu_item_bg"
            android:gravity="center_vertical"
            android:paddingLeft="10dp">

            <ImageView
                android:id="@+id/ic_home_bottom"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:src="@mipmap/icon_favorite" />

            <TextView
                android:id="@+id/tv_home_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/ic_home_bottom"
                android:text="@string/tv_window_bottom"
                android:textColor="#9b9b9b"
                android:textSize="18dp" />

            <CheckBox
                android:id="@+id/cb_window_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp" />
        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#1a000000" />

        <RelativeLayout
            android:id="@+id/rl_autoquery"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/menu_item_bg"
            android:gravity="center_vertical"
            android:paddingLeft="10dp">

            <ImageView
                android:id="@+id/iv_autoquery"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:src="@android:drawable/ic_input_get" />

            <TextView
                android:id="@+id/tv_autoquery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/iv_autoquery"
                android:text="@string/tv_autoquery"
                android:textColor="#9b9b9b"
                android:textSize="18dp" />

            <CheckBox
                android:id="@+id/auto_query"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#1a000000" />

        <RelativeLayout
            android:id="@+id/rl_delete"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/menu_item_bg"
            android:gravity="center_vertical"
            android:paddingLeft="10dp">

            <ImageView
                android:id="@+id/iv_delete"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:src="@android:drawable/ic_menu_delete" />

            <TextView
                android:id="@+id/tv_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/iv_delete"
                android:text="@string/tv_delete"
                android:textColor="#9b9b9b"
                android:textSize="18dp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#1a000000" />

        <RelativeLayout
            android:id="@+id/rl_wordbook"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/menu_item_bg"
            android:gravity="center_vertical"
            android:paddingLeft="10dp">

            <ImageView
                android:id="@+id/iv_wordbook"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:src="@android:drawable/ic_dialog_email" />

            <TextView
                android:id="@+id/tv_workbook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/iv_wordbook"
                android:text="@string/tv_wordbook"
                android:textColor="#9b9b9b"
                android:textSize="18dp" />

        </RelativeLayout>

        <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#1a000000" />

        <RelativeLayout
            android:id="@+id/rl_test"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/menu_item_bg"
            android:gravity="center_vertical"
            android:paddingLeft="10dp">

            <ImageView
                android:id="@+id/iv_test"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:src="@android:drawable/ic_menu_edit" />

            <TextView
                android:id="@+id/tv_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/iv_test"
                android:text="@string/tv_test"
                android:textColor="#9b9b9b"
                android:textSize="18dp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#1a000000" />

        <RelativeLayout
            android:id="@+id/rl_ocr"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/menu_item_bg"
            android:gravity="center_vertical"
            android:paddingLeft="10dp">

            <ImageView
                android:id="@+id/iv_ocr"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:src="@android:drawable/ic_menu_edit" />

            <TextView
                android:id="@+id/tv_ocr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/iv_ocr"
                android:text="@string/tv_ocr"
                android:textColor="#9b9b9b"
                android:textSize="18dp" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>